@@ -1,0 +1,62 @@
+/*
+ * $Id: mainpage.dox.cmake 2011-09-21 Mickael Savinaud $
+ *
+ * Copyright (c) 2002-2011, Communications and Remote Sensing Laboratory, Universite catholique de Louvain (UCL), Belgium
+ * Copyright (c) 2011, Mickael Savinaud, Communications & Systemes <mickael.savinaud@c-s.fr>
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS `AS IS'
+ * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+ * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ */
+ 
+/*! \mainpage OpenJPEG v@OPENJPEG_VERSION@ Documentation
+*
+* \section intro Introduction
+* This manual documents the low-level OpenJPEG C API.\n
+* The OpenJPEG library is an open-source JPEG 2000 library developed in order to promote the use of JPEG 2000.\n
+* This documents is focused on the main part of the library which try to implement Part 1 and Part 2 of the JPEG2000 norm.\n 
+*
+* \section home Home page
+*
+* The Home Page of the OpenJPEG library can be found at:
+*
+* http://code.google.com/p/openjpeg/
+* 
+* More information about the OpenJPEG library is available here:
+*
+* http://www.openjpeg.org/
+* 
+* The OpenJPEG mailing list is located here:
+* 
+* http://groups.google.com/group/openjpeg
+* 
+* All the source code is online and can be retrieved using svn from here:
+* 
+* http://openjpeg.googlecode.com/svn/
+*
+* \section license License
+* This software is released under the BSD license, anybody can use or modify the library, even for commercial applications.\n
+* The only restriction is to retain the copyright in the sources or the binaries documentation.\n
+* Neither the author, nor the university accept any responsibility for any kind of error or data loss which may occur during usage.
+*
+* \author OpenJPEG Team
+*
+*/
